--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "socket.io-client": "^2.3.0",
+    "uid-generator": "^2.0.0",
     "universal-cookie": "^4.0.3"
   },
   "proxy": "http://localhost:4000/",
